--- a/client/views/printAll.html
+++ b/client/views/printAll.html
@@ -26,14 +26,11 @@
       <td at-implicit at-attribute="SalesPrice" >$</td>
       <td at-implicit at-attribute="Total" >$</td>
       <td at-implicit at-attribute="TotalSavings" at-initial-sorting="desc" class="bold">$</td>
-      <td at-implicit at-attribute="RecoType" at-title="Provider"></td>
+      <td at-implicit at-attribute="RecoType_small" at-title="Supplier"></td>
       <td at-implicit at-attribute="RecoTyped" at-title="Total Savings"></td>
     </tr>
   </tbody>
   </table>
-
-  <at-pagination at-list="myPurchases" at-config="tableConfig"></at-pagination>
-
 
   </body>
 </html>
