--- a/client/concat/styles.css
+++ b/client/concat/styles.css
@@ -45,3 +45,127 @@ tr:first-child th{
 .print{
 	width: 90%
 }
+
+#printButtons{
+	float: left;
+	padding-left: 5%;
+}
+
+#tablePage{
+	float:right;
+	padding-right: 1%;
+}
+
+/*FILTERS*/
+
+#tableFilters{
+	float: left;
+}
+
+.filters{
+   display:inline-block;
+ /*background:transparent url('/_Layouts/PBA/PG/img/fancy/btn_filters.png') center top no-repeat;*/
+background:transparent url('/img/btn_filters.png') center top no-repeat;
+ height: 37px;
+ width: 71px;
+ margin-right: -8px;
+border-right-style: solid;
+border-width: 1px;
+border-color: white;
+}
+.source{
+ display:inline-block;
+ background:transparent url('/img/btn_rebated_ON.png') center top no-repeat;
+ height: 37px;
+ width: 117px;
+ margin-right: -6px;
+border-right-style: solid;
+border-width: 1px;
+border-color: white;
+cursor: pointer;
+}
+.sourceRed{
+ display:inline-block;
+ background:transparent url('/img/btn_rebated_OFF.png') center top no-repeat;
+ height: 37px;
+ width: 117px;
+ margin-right: -6px;
+border-right-style: solid;
+border-width: 1px;
+border-color: white;
+cursor: pointer;
+}
+.noncontract{
+ display:inline-block;
+ background:transparent url('/img/btn_non_rebated_ON.png') center top no-repeat;
+ height: 37px;
+ width: 138px;
+ margin-right: -7px;
+ border-right-style: solid;
+border-width: 1px;
+border-color: white;
+cursor: pointer;
+}
+.noncontractRed{
+ display:inline-block;
+ background:transparent url('/img/btn_non_rebated_OFF.png') center top no-repeat;
+ height: 37px;
+ width: 138px;
+ margin-right: -7px;
+ border-right-style: solid;
+border-width: 1px;
+border-color: white;
+cursor: pointer;
+}
+
+
+
+.endorsed{
+ display:inline-block;
+ background:transparent url('/img/btn_primaryWhole_ON.png') center top no-repeat;
+ height: 37px;
+ width: 200px;
+ margin-right: -6px;border-right-style: solid;
+border-width: 1px;
+border-color: white;
+cursor: pointer;
+}
+.endorsedRed{
+ display:inline-block;
+ background:transparent url('/img/btn_primaryWhole_OFF.png') center top no-repeat;
+ height: 37px;
+ width: 200px;
+ margin-right: -6px;
+ border-right-style: solid;
+border-width: 1px;
+border-color: white;
+cursor: pointer;
+}
+
+.fromPBA{
+  display:inline-block;
+ background:transparent url('/img/btn_pba_on.png') center top no-repeat;
+ height: 37px;
+ width: 130px;
+ margin-right: -7px;
+ border-right-style: solid;
+border-width: 1px;
+border-color: white;
+cursor: pointer;
+}
+
+.fromPBARed{
+  display:inline-block;
+ background:transparent url('/img/btn_pba_OFF.png') center top no-repeat;
+ height: 37px;
+ width: 130px;
+ margin-right: -7px;
+ border-right-style: solid;
+border-width: 1px;
+border-color: white;
+cursor: pointer;
+}
+
+#cachedImages{
+ display: none;
+}
