--- a/client/views/index.html
+++ b/client/views/index.html
@@ -6,53 +6,60 @@
 <script src='concat/scripts.js'></script>
   </head>
   <body>
-  <div class="dvCustId"><asp:HiddenField ID="CustId" runat="server" /></div>
-<h2>Todo</h2>
-    <div ng-controller="TodoCtrl">
+  <div class="dvCustId"><asp:HiddenField ID="CustId" runat="server" />1</div>
+  <div ng-controller="TodoCtrl">
 
-      <div ng-controller='filters'>
-
-      <button ng-click="test($event)" id="MYLAN" class="btn btn-success">Filter 1 Off</button>
-      <button ng-click="test($event)" id="RANBAXY" class="btn btn-success">Filter 2 Off</button>
-
+    <div ng-controller='filters'>
+      <div id="tableFilters">
+        <div class="filters"></div>
+        <div class="noncontract" id="noncontract" ng-click="filterClick('Non Contract', $event)"></div>
+        <div class="source" id="source" ng-click="filterClick('Source', $event)"></div>
+        <div class="fromPBA" id="fromPBA" ng-click="filterClick('From PBA', $event)"></div>
+        <div class="endorsed" id="endorsed" ng-click="filterClick('Primary Wholesaler', $event)"></div>
       </div>
+    </div>
+    <!-- <br> -->
 
-      <!-- <button ng-click="collapse()" class="btn btn-success">Collapse</button> -->
+
+<div ng-controller='printCtrl2' >
+  <span id="printButtons">
+  <button id="printAll" ng-click="printAll()"
+    class="btn btn-info btn-sm">Print All</button>
+  <button id="printSelected" ng-click="printSelected()"
+    class="btn btn-info btn-sm">Print Selected ( {{selected}} )</button>
+  </span>
 
 
+  <p id="tablePage">Show
   <select ng-model="myPagination" ng-options="color.name for color in pagination"
-  	ng-change="selectChanged(myPagination)" ></select><br>
+    ng-change="selectChanged(myPagination)" > </select>
+    Entries
+  </p>
 
-  <div ng-controller='printCtrl2'>
-    <button id="printAll" ng-click="printAll()">Print All</button>
-    <button id="printSelected" ng-click="printSelected()">Print Selected ( {{selected}} )</button>
-  <div>
-  <strong>Results:</strong> {{myPurchases.length}}
   <table at-table at-list="myPurchases" at-paginated at-config="tableConfig"
   class="table table-striped table-condensed table-hover table-bordered" id="queryTable">
-  <thead></thead>
-  <tbody>
-    <tr class="mainRows" ng-click="addPrint(this.item.RowID, $event)" id="{{this.item.RowID}}">
-    <td><input type="checkbox" id="checkbox{{this.item.RowID}}"> Print</td>
-      <td at-implicit at-attribute="NDC" class="fixedWidthTD"></td>
-      <td at-implicit at-attribute="Descr" ></td>
-      <td at-implicit at-attribute="MfgName" ></td>
-      <td at-implicit at-attribute="Form" ></td>
-      <td at-implicit at-attribute="Str" ></td>
-      <td at-implicit at-attribute="Size" ></td>
-      <td at-implicit at-attribute="Qty" ></td>
-      <td at-implicit at-attribute="SalesPrice" >$</td>
-      <td at-implicit at-attribute="Total" >$</td>
-      <td at-implicit at-attribute="TotalSavings" at-initial-sorting="desc" class="bold">$</td>
-      <td at-implicit at-attribute="RecoType" at-title="Provider"></td>
-      <td at-implicit at-attribute="RecoTyped" at-title="Total Savings"></td>
-    </tr>
-  </tbody>
-</table>
+    <thead></thead>
+    <tbody>
+      <tr class="mainRows" ng-click="addPrint(this.item.RowID, $event)" id="{{this.item.RowID}}">
+      <td><input type="checkbox" id="checkbox{{this.item.RowID}}"> Print</td>
+        <td at-implicit at-attribute="NDC" class="fixedWidthTD"></td>
+        <td at-implicit at-attribute="Descr" ></td>
+        <td at-implicit at-attribute="MfgName" ></td>
+        <td at-implicit at-attribute="Form" ></td>
+        <td at-implicit at-attribute="Str" ></td>
+        <td at-implicit at-attribute="Size" ></td>
+        <td at-implicit at-attribute="Qty" ></td>
+        <td at-implicit at-attribute="SalesPrice" >$</td>
+        <td at-implicit at-attribute="Total" >$</td>
+        <td at-implicit at-attribute="TotalSavings" at-initial-sorting="desc" class="bold">$</td>
+        <td at-implicit at-attribute="RecoType_small" at-title="Supplier"></td>
+        <td at-implicit at-attribute="RecoTyped" at-title="Total Savings"></td>
+      </tr>
+    </tbody>
+  </table>
+  <strong>Results:</strong> {{myPurchases.length}}
+  <at-pagination at-list="myPurchases" at-config="tableConfig"></at-pagination>
 
-<at-pagination at-list="myPurchases" at-config="tableConfig"></at-pagination>
-
-{{tableConfig}}
 
 
     </div>
