--- a/client/views/index.html
+++ b/client/views/index.html
@@ -42,9 +42,10 @@
     <tbody>
       <tr class="mainRows" ng-click="addPrint(this.item.RowID, $event)" id="{{this.item.RowID}}">
       <td><input type="checkbox" id="checkbox{{this.item.RowID}}"> Print</td>
+        <td at-implicit at-attribute="NDC2" at-title="Type" >Purchased</td>
         <td at-implicit at-attribute="NDC" class="fixedWidthTD"></td>
-        <td at-implicit at-attribute="Descr" ></td>
-        <td at-implicit at-attribute="MfgName" ></td>
+        <td at-implicit at-attribute="Descr" at-title="Description"></td>
+        <td at-implicit at-attribute="MfgName" at-title="Manufacturer"></td>
         <td at-implicit at-attribute="Form" ></td>
         <td at-implicit at-attribute="Str" ></td>
         <td at-implicit at-attribute="Size" ></td>
@@ -60,8 +61,8 @@
   <strong>Results:</strong> {{myPurchases.length}}
   <at-pagination at-list="myPurchases" at-config="tableConfig"></at-pagination>
 
-
-
     </div>
+
+    <h4>Hidden recommendations will be removed on your next visit, for 1 month<h4>
   </body>
 </html>
