--- a/client/views/printAll.html
+++ b/client/views/printAll.html
@@ -15,10 +15,11 @@
   <thead></thead>
   <tbody>
     <tr class="mainRows" id="{{this.item.RowID}}">
-    <td class="checkboxPrint">Purchased</td>
+    <td><input type="checkbox" > Print</td>
+      <td at-implicit at-attribute="NDC2" at-title="Type" >Purchased</td>
       <td at-implicit at-attribute="NDC" class="fixedWidthTD"></td>
-      <td at-implicit at-attribute="Descr" ></td>
-      <td at-implicit at-attribute="MfgName" ></td>
+      <td at-implicit at-attribute="Descr" at-title="Description"></td>
+      <td at-implicit at-attribute="MfgName" at-title="Manufacturer"></td>
       <td at-implicit at-attribute="Form" ></td>
       <td at-implicit at-attribute="Str" ></td>
       <td at-implicit at-attribute="Size" ></td>
