--- a/client/views/index.html
+++ b/client/views/index.html
@@ -91,7 +91,7 @@
         <td at-implicit at-attribute="SalesPrice" >$</td>
         <td at-implicit at-attribute="Total" >$</td>
         <td at-implicit at-attribute="TotalSavings" at-initial-sorting="desc" class="bold">$</td>
-        <!-- <td at-implicit at-attribute="TotalSavings" at-title="Total Savings" class="blue">$</td> -->
+        <td at-implicit at-attribute="TotalSavings2" at-title="Total Savings" class="blue">$</td>
         <td at-implicit at-attribute="RecoType_small" at-title="Supplier"></td>
       </tr>
     </tbody>
